--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,10 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: ["8.0", "8.1"]
-                symfony: ["5.4.*", "^6.0"]
+                php: ["8.1", "8.2"]
+                symfony: ["^6.4"]
                 sylius: ["^1.12"]
-                node: ["14.x", "16.x", "18.x"]
+                node: ["18.x"]
                 mysql: ["5.7", "8.0"]
 
         env:
