--- a/composer.json
+++ b/composer.json
@@ -2,47 +2,45 @@
     "type": "sylius-plugin",
     "keywords": [
         "sylius",
+        "klarna",
         "sylius-plugin"
     ],
     "license": "proprietary",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "sylius/sylius": "^1.12",
-        "sylius/mailer-bundle":  "^1.8 || ^2.0@beta",
-        "symfony/webpack-encore-bundle": "^1.15"
+        "sylius/mailer-bundle":  "^2.0",
+        "symfony/webpack-encore-bundle": "^1.17"
     },
     "require-dev": {
-        "behat/behat": "^3.6.1",
-        "behat/mink-selenium2-driver": "^1.4",
-        "dmore/behat-chrome-extension": "^1.3",
-        "dmore/chrome-mink-driver": "^2.7",
-        "friends-of-behat/mink": "^1.8",
-        "friends-of-behat/mink-browserkit-driver": "^1.4",
-        "friends-of-behat/mink-debug-extension": "^2.0.0",
-        "friends-of-behat/mink-extension": "^2.4",
+        "behat/behat": "^3.14",
+        "behat/mink-selenium2-driver": "^1.6",
+        "dmore/behat-chrome-extension": "^1.4",
+        "dmore/chrome-mink-driver": "^2.9",
+        "friends-of-behat/mink": "^1.10",
+        "friends-of-behat/mink-browserkit-driver": "^1.6",
+        "friends-of-behat/mink-debug-extension": "^2.1",
+        "friends-of-behat/mink-extension": "^2.7",
         "friends-of-behat/page-object-extension": "^0.3",
-        "friends-of-behat/suite-settings-extension": "^1.0",
-        "friends-of-behat/symfony-extension": "^2.1",
-        "friends-of-behat/variadic-extension": "^1.3",
-        "phpspec/phpspec": "^7.2",
-        "phpstan/extension-installer": "^1.0",
-        "phpstan/phpstan": "^1.8.1",
-        "phpstan/phpstan-doctrine": "1.3.37",
-        "phpstan/phpstan-strict-rules": "^1.3.0",
-        "phpstan/phpstan-webmozart-assert": "^1.2.0",
-        "phpunit/phpunit": "^9.5",
+        "friends-of-behat/suite-settings-extension": "^1.1",
+        "friends-of-behat/symfony-extension": "^2.5",
+        "friends-of-behat/variadic-extension": "^1.5",
+        "phpspec/phpspec": "^7.5",
+        "phpstan/extension-installer": "^1.3",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-strict-rules": "^1.5",
+        "phpstan/phpstan-webmozart-assert": "^1.2",
+        "phpunit/phpunit": "^9.6",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
-        "sylius-labs/coding-standard": "^4.2",
-        "symfony/browser-kit": "^5.4 || ^6.0",
-        "symfony/debug-bundle": "^5.4 || ^6.0",
-        "symfony/dotenv": "^5.4 || ^6.0",
-        "symfony/flex": "^2.2.2",
-        "symfony/intl": "^5.4 || ^6.0",
-        "symfony/web-profiler-bundle": "^5.4 || ^6.0",
+        "sylius-labs/coding-standard": "^4.3",
+        "symfony/browser-kit": "^6.4",
+        "symfony/debug-bundle": "^6.4",
+        "symfony/dotenv": "^6.4",
+        "symfony/flex": "^2.4",
+        "symfony/intl": "^6.4",
+        "symfony/web-profiler-bundle": "^6.4",
         "vimeo/psalm": "5.9.0"
-    },
-    "conflict": {
-        "symfony/framework-bundle": "6.2.8"
     },
     "config": {
         "sort-packages": true,
@@ -54,13 +52,13 @@
     },
     "extra": {
         "symfony": {
-            "require": "^5.4 || ^6.0"
+            "require": "^6.4"
         }
     },
     "autoload": {
         "psr-4": {
-            "Acme\\SyliusExamplePlugin\\": "src/",
-            "Tests\\Acme\\SyliusExamplePlugin\\": "tests/"
+            "Webgriffe\\SyliusKlarnaPlugin\\": "src/",
+            "Tests\\Webgriffe\\SyliusKlarnaPlugin\\": "tests/"
         }
     },
     "autoload-dev": {
