--- a/config/shop_routing.yml
+++ b/config/shop_routing.yml
@@ -1,13 +1,13 @@
 # Delete these routes and define your own shop routes here
 
-acme_sylius_example_static_welcome:
+webgriffe_sylius_klarna_static_welcome:
     path: /static-welcome/{name}
     defaults:
-        _controller: Acme\SyliusExamplePlugin\Controller\GreetingController::staticallyGreetAction
+        _controller: Webgriffe\SyliusKlarnaPlugin\Controller\GreetingController::staticallyGreetAction
         name: ~
 
-acme_sylius_example_dynamic_welcome:
+webgriffe_sylius_klarna_dynamic_welcome:
     path: /dynamic-welcome/{name}
     defaults:
-        _controller: Acme\SyliusExamplePlugin\Controller\GreetingController::dynamicallyGreetAction
+        _controller: Webgriffe\SyliusKlarnaPlugin\Controller\GreetingController::dynamicallyGreetAction
         name: ~
