--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
     "license": "proprietary",
     "require": {
         "php": "^8.1",
+        "klarna/checkout": "^4.0",
+        "payum/klarna-checkout": "*",
+        "sylius/mailer-bundle": "^2.0",
         "sylius/sylius": "^1.12",
-        "sylius/mailer-bundle":  "^2.0",
         "symfony/webpack-encore-bundle": "^1.17"
     },
     "require-dev": {
