--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,9 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: ["8.1", "8.2"]
+                php: ["8.2"]
                 symfony: ["^6.4"]
-                sylius: ["^1.12"]
+                sylius: ["~1.12.0"]
                 node: ["18.x"]
                 mysql: ["5.7", "8.0"]
 
