--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require-dev": {
         "behat/behat": "^3.14",
-        "behat/mink-selenium2-driver": "^1.6",
+        "behat/mink-selenium2-driver": "1.6",
         "dmore/behat-chrome-extension": "^1.4",
         "dmore/chrome-mink-driver": "^2.9",
         "friends-of-behat/mink": "^1.10",
