--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,11 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: ["8.2"]
+                php: ["8.2", "8.3"]
                 symfony: ["^6.4"]
-                sylius: ["~1.12.0"]
-                node: ["18.x"]
-                mysql: ["5.7", "8.0"]
+                sylius: ["~1.12.17"]
+                node: ["20.x"]
+                mysql: ["8.0"]
 
         env:
             APP_ENV: test
