--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "symfony/flex": "^2.4",
         "symfony/intl": "^6.4",
         "symfony/web-profiler-bundle": "^6.4",
-        "vimeo/psalm": "5.9.0"
+        "vimeo/psalm": "^5.25"
     },
     "config": {
         "sort-packages": true,
