--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
             - 'dependabot/**'
     pull_request: ~
     release:
-        types: [created]
+        types: [ created ]
     schedule:
         -
             cron: "0 1 * * 6" # Run at 1am every Saturday
@@ -16,16 +16,16 @@ jobs:
     tests:
         runs-on: ubuntu-latest
 
-        name: "Sylius ${{ matrix.sylius }}, PHP ${{ matrix.php }}, Symfony ${{ matrix.symfony }}, MySQL ${{ matrix.mysql }}"
+        name: "Sylius ${{ matrix.sylius }}, PHP ${{ matrix.php }}, Symfony ${{ matrix.symfony }}, MySQL ${{ matrix.mysql }} Node ${{ matrix.node }}"
 
         strategy:
             fail-fast: false
             matrix:
-                php: ["8.2", "8.3"]
-                symfony: ["^6.4"]
-                sylius: ["~1.12.17"]
-                node: ["20.x"]
-                mysql: ["8.0"]
+                php: [ "8.2", "8.3" ]
+                sylius: ["1.12.19", "1.13.4"]
+                symfony: [ "^6.4" ]
+                node: [ "20.x" ]
+                mysql: [ "8.0" ]
 
         env:
             APP_ENV: test
@@ -46,7 +46,7 @@ jobs:
 
             -
                 name: Setup Node
-                uses: actions/setup-node@v3
+                uses: actions/setup-node@v4
                 with:
                     node-version: "${{ matrix.node }}"
 
@@ -78,13 +78,17 @@ jobs:
                 run: (cd tests/Application && symfony server:start --port=8080 --dir=public --daemon)
 
             -
+                name: Validate composer.json
+                run: composer validate --ansi --strict
+
+            -
                 name: Get Composer cache directory
                 id: composer-cache
                 run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
 
             -
                 name: Cache Composer
-                uses: actions/cache@v3
+                uses: actions/cache@v4
                 with:
                     path: ${{ steps.composer-cache.outputs.dir }}
                     key: ${{ runner.os }}-php-${{ matrix.php }}-composer-${{ hashFiles('**/composer.json **/composer.lock') }}
@@ -121,7 +125,7 @@ jobs:
 
             -
                 name: Cache Yarn
-                uses: actions/cache@v3
+                uses: actions/cache@v4
                 with:
                     path: ${{ steps.yarn-cache.outputs.dir }}
                     key: ${{ runner.os }}-node-${{ matrix.node }}-yarn-${{ hashFiles('**/package.json **/yarn.lock') }}
@@ -142,6 +146,7 @@ jobs:
                 name: Prepare test application assets
                 run: |
                     (cd tests/Application && bin/console assets:install public -vvv)
+                    (cd tests/Application && bin/console sylius:install:assets -vvv)
                     (cd tests/Application && yarn build:prod)
 
             -
@@ -151,10 +156,6 @@ jobs:
             -
                 name: Load fixtures in test application
                 run: (cd tests/Application && bin/console sylius:fixtures:load -n)
-
-            -
-                name: Validate composer.json
-                run: composer validate --ansi --strict
 
             -
                 name: Validate database schema
