--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     "require": {
         "php": "^8.2",
         "sylius/sylius": "^1.12",
-        "sylius/mailer-bundle":  "^2.0",
         "symfony/webpack-encore-bundle": "^1.17"
     },
     "require-dev": {
         "behat/behat": "^3.14",
-        "behat/mink-selenium2-driver": "1.6",
+        "behat/mink-selenium2-driver": "^1.6",
+        "dbrekelmans/bdi": "^1.1",
         "dmore/behat-chrome-extension": "^1.4",
         "dmore/chrome-mink-driver": "^2.9",
         "friends-of-behat/mink": "^1.10",
@@ -30,19 +30,21 @@
         "phpspec/phpspec": "^7.5",
         "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan": "^1.10",
-        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-doctrine": "1.3.69",
         "phpstan/phpstan-strict-rules": "^1.5",
         "phpstan/phpstan-webmozart-assert": "^1.2",
-        "phpunit/phpunit": "^9.6",
+        "phpunit/phpunit": "^10.5",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
+        "robertfausk/behat-panther-extension": "^1.1",
         "sylius-labs/coding-standard": "^4.3",
+        "sylius-labs/suite-tags-extension": "^0.2",
         "symfony/browser-kit": "^6.4",
         "symfony/debug-bundle": "^6.4",
         "symfony/dotenv": "^6.4",
         "symfony/flex": "^2.4",
         "symfony/intl": "^6.4",
         "symfony/web-profiler-bundle": "^6.4",
-        "vimeo/psalm": "^5.25"
+        "vimeo/psalm": "^5.9"
     },
     "config": {
         "sort-packages": true,
