--- a/phpstan.neon
+++ b/phpstan.neon
@@ -15,4 +15,6 @@ parameters:
 
     ignoreErrors:
         -
+            identifier: missingType.generics # Temp
+        -
             identifier: missingType.iterableValue
